--- a/style.css
+++ b/style.css
@@ -135,35 +135,41 @@ border-radius: 20px;
 
 
 
-.block3{
-	background: linear-gradient( #0052d4, #C2DFFF);
-	color: black;
-	padding: 13px;
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 80%;
+  margin-left: auto;
+margin-right: auto;
 
-	margin-left: 8%;
-	float: left;
-	width: 300px; 
-	height: 200px; 
-	box-shadow: 0 8px 16px rgba(0 , 0  ,0 , 0.5); 
-	text-align: center;
-	background-color: blue;
-      transition: transform 0.5s;
+}
 
-
+.block3 {
+  background: linear-gradient(#0052d4, #C2DFFF);
+  color: black;
+  padding: 13px;
+  margin-bottom: 20px;
+  width: 300px;
+  height: 200px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5);
+  text-align: center;
+  background-color: blue;
+  transition: transform 0.5s;
+  
 }
 
 .block3:hover {
-      transform: scale(1.1);
-    
-
+  transform: scale(1.1);
 }
+
 .block3 a {
-      display: block;
-      width: 100%;
-      height: 100%;
-      text-decoration: none;
-      color: black;
-    }
+  display: block;
+  width: 100%;
+  height: 100%;
+  text-decoration: none;
+  color: black;
+}
 
 
 footer{
