--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ html, body {
 body {
 	margin: 0; 
 	
-	 background: linear-gradient(45deg, #0052d4, #6fb1fc);
+	 background: linear-gradient(45deg, #0052d4, #0006b8);
 	 no repeat; 
 }
 
