--- a/style.css
+++ b/style.css
@@ -93,6 +93,8 @@ padding: 10px;
 width: 60%; 
 margin-left: auto;
 border-radius: 2%; 
+	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
 
 }
 .dropbtn {
