--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ margin-right: auto;
 }
 
 .block3 {
-  background: linear-gradient(#0052d4, #C2DFFF);
+  background: linear-gradient(#8B0000, #9B111E);
   color: black;
   padding: 13px;
   margin-bottom: 20px;
@@ -191,4 +191,5 @@ background: #ffff;
 
 	
 }
+
 
